@@ -2573,6 +2573,17 @@ undump-buildings
 ================
 Undesignates building base materials for dumping.
 
+view-item-info
+==============
+A script to extend the item or unit viewscreen with additional information
+including a custom description of each item (when available), and properties
+such as material statistics, weapon attacks, armor effectiveness, and more.
+
+The associated script ``item-descriptions.lua`` supplies custom descriptions
+of items.  Individual descriptions can be added or overridden by a similar
+script ``raw/scripts/more-item-descriptions.lua``.  Both work as sparse lists,
+so missing items simply go undescribed if not defined in the fallback.
+
 ========
 modtools
 ========
